
2.3 (under development)
=======================

Features added
--------------

* XPath attribute result strings have an ``attrname`` property.

* Namespace URIs get validated against RFC 3986 at the API level
  (required by the XML namespace specification).

* Target parsers show their target object in the ``.target`` property
  (compatible with ElementTree).

Bugs fixed
----------

* CSS special character escapes were not properly handled in
  ``lxml.cssselect``.

* CSS Unicode escapes were not properly decoded in ``lxml.cssselect``.

* Select options in HTML forms that had no explicit ``value``
  attribute were not handled correctly.  The HTML standard dictates
  that their value is defined by their text content.  This is now
  supported by lxml.html.

* XPath raised a TypeError when finding CDATA sections.  This is now
  fully supported.

* Calling ``help(lxml.objectify)`` didn't work at the prompt.

* The ``ElementMaker`` in lxml.objectify no longer defines the default
  namespaces when annotation is disabled.

* Feed parser failed to honout the 'recover' option on parse errors.

* Target parser didn't call ``.close()`` on the target object if
  parsing failed.  Now it is guaranteed that ``.close()`` will be
  called after parsing, regardless of the outcome.

* Diverting the error logging to Python's logging system was broken.

Other changes
-------------

* Static builds include libiconv, in addition to libxml2 and libxslt.


2.2.2 (2009-06-21)
==================

Features added
--------------

* New helper functions ``strip_attributes()``, ``strip_elements()``,
  ``strip_tags()`` in lxml.etree to remove attributes/subtrees/tags
  from a subtree.

Bugs fixed
----------

* Namespace cleanup on subtree insertions could result in missing
  namespace declarations (and potentially crashes) if the element
  defining a namespace was deleted and the namespace was not used by
  the top element of the inserted subtree but only in deeper subtrees.
